--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/simple-backgammon"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/SimpleBackgammon"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
